test/sema/traits/impl_trait_fn_type_param_trait_mismatch.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {
  fn foo<T, U, V>();

  fn bar();
}

struct S {
  impl A {
    // CHECK: [[# @LINE + 1]]:8: error: type argument count mismatch, expected 3, but received 0
    fn foo() {}

    // CHECK: [[# @LINE + 1]]:8: error: type argument count mismatch, expected 0, but received 3
    fn bar<T, U, V>() {}
  }
}

fn main() {
  S::foo();
  S::bar();
}
